--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8081
+spring.application.name=order-service
 spring.datasource.url=jdbc:mysql://localhost:3306/order-service
 spring.datasource.username=admin
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
