--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,25 @@
 server.port=0
 spring.application.name=order-service
+
 spring.datasource.url=jdbc:mysql://localhost:3306/order-service
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create-drop
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+resilience4j.circuitbreaker.instances.inventory-service.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.inventory-service.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.inventory-service.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.inventory-service.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.inventory-service.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.inventory-service.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.inventory-service.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.inventory-service.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.timelimiter.instances.inventory-service.timeoutDuration=3s
+resilience4j.retry.instances.inventory-service.max-attempts=3
+resilience4j.retry.instances.inventory-service.waitDuration=1s
