--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ resilience4j.circuitbreaker.instances.inventory-service.automaticTransitionFromO
 resilience4j.timelimiter.instances.inventory-service.timeoutDuration=3s
 resilience4j.retry.instances.inventory-service.max-attempts=3
 resilience4j.retry.instances.inventory-service.waitDuration=1s
+
+management.tracing.sampling.probability=1.0
+
+
