--- a/pom.xml
+++ b/pom.xml
@@ -54,13 +54,18 @@
     	  <groupId>org.springframework.kafka</groupId>
     	  <artifactId>spring-kafka</artifactId>
     	</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+    	  <groupId>org.postgresql</groupId>
+    	  <artifactId>postgresql</artifactId>
+    	  <scope>runtime</scope>
+    	</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -100,6 +105,20 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.0</version>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:17.0.4.1_1-jre</image>
+                    </from>
+                    <to>
+                        <image>registry.hub.docker.com/tonghohin/${project.artifactId}</image>
+                    </to>
+                </configuration>
+            </plugin>
+			
 		</plugins>
 	</build>
 
