--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=0
 spring.application.name=order-service
 
-spring.datasource.url=jdbc:mysql://localhost:3306/order-service
+spring.datasource.url=jdbc:postgresql://localhost:3306/order-service
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -25,6 +25,7 @@ resilience4j.retry.instances.inventory-service.max-attempts=3
 resilience4j.retry.instances.inventory-service.waitDuration=1s
 
 management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.template.default-topic=notificationTopic
